# test-repo

./: .gitignore  .readthedocs.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: index.md  reference.md  requirements.txt  user-guide.md
test_oyster/: __init__.py  adding.py
tests/: __init__.py  test_adding.py
