[tool.poetry]
name = "test-oyster"
version = "0.1.0"
description = "This is a testing repo. Please ignore."
authors = ["Ederic Oytas <edericoytas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
tox = "^4.6.3"

[tool.poetry.group.type-check.dependencies]
mypy = "^1.4.1"

[tool.poetry.group.lint.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
